[gd_scene format=3 uid="uid://b0xae0m5bw63g"]

[ext_resource type="Script" uid="uid://dokdxqvlvb0y0" path="res://Scripts/title_screen.gd" id="1_w5sh6"]
[ext_resource type="Texture2D" uid="uid://cfg4y10jiuv6l" path="res://Assets/Universal/title.png" id="2_o1e67"]
[ext_resource type="Texture2D" uid="uid://c37bh0k0ppl1r" path="res://Assets/Universal/logo.png" id="3_ycay6"]
[ext_resource type="FontFile" uid="uid://dx4dbuk0rrfp8" path="res://Assets/Fonts/RevMiniPixel.ttf" id="4_bsy20"]
[ext_resource type="StyleBox" uid="uid://drt8sv77q5u10" path="res://Themes/btn_normal.tres" id="5_07cxn"]
[ext_resource type="StyleBox" uid="uid://d33yh4m25d6oh" path="res://Themes/btn_pressed.tres" id="6_x2pfe"]
[ext_resource type="Script" uid="uid://bjimkprrlxhhf" path="res://Scripts/style_btn.gd" id="7_w5sh6"]
[ext_resource type="StyleBox" uid="uid://co7ce7wvhqtff" path="res://Themes/btn_hover.tres" id="9_vqgqr"]
[ext_resource type="PackedScene" uid="uid://bdwhpi6xh2nw7" path="res://Scenes/tutorial.tscn" id="10_8mikk"]
[ext_resource type="AudioStream" uid="uid://bv77j2c64b0kk" path="res://Sounds/title.mp3" id="12_2ia2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gni0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2ad1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0hp5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qfetl"]

[node name="TitleScreen" type="Control" unique_id=2044408538]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5sh6")
metadata/_edit_vertical_guides_ = [1151.0]

[node name="Background" type="TextureRect" parent="." unique_id=1991931463]
texture_repeat = 2
layout_mode = 0
offset_right = 288.0
offset_bottom = 208.0
texture = ExtResource("2_o1e67")
expand_mode = 2

[node name="LogoRect" type="TextureRect" parent="." unique_id=400490795]
layout_mode = 0
offset_top = -7.0
offset_right = 163.5
offset_bottom = 102.0
texture = ExtResource("3_ycay6")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=105977734]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 38
theme_override_constants/margin_top = 78
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=2143601690]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1203360727]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0gni0")

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1007304146]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bsy20")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_07cxn")
theme_override_styles/pressed = ExtResource("6_x2pfe")
theme_override_styles/focus = ExtResource("6_x2pfe")
button_mask = 0
text = "COMEÇAR"
script = ExtResource("7_w5sh6")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1113860893]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_t2ad1")

[node name="TutorialBtn" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1826513572]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bsy20")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_07cxn")
theme_override_styles/pressed = ExtResource("6_x2pfe")
theme_override_styles/focus = ExtResource("6_x2pfe")
button_mask = 0
text = "TUTORIAL"
script = ExtResource("7_w5sh6")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=518791331]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0hp5x")

[node name="CreditsBtn" type="Button" parent="MarginContainer/VBoxContainer" unique_id=612572255]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bsy20")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_07cxn")
theme_override_styles/pressed = ExtResource("6_x2pfe")
theme_override_styles/hover = ExtResource("9_vqgqr")
theme_override_styles/focus = ExtResource("6_x2pfe")
text = "CRÉDITOS"
script = ExtResource("7_w5sh6")

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1916561985]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qfetl")

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer" unique_id=571775424]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4379066, 0.6647231, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bsy20")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_07cxn")
theme_override_styles/pressed = ExtResource("6_x2pfe")
theme_override_styles/hover = ExtResource("9_vqgqr")
theme_override_styles/focus = ExtResource("6_x2pfe")
text = "FECHAR"
script = ExtResource("7_w5sh6")

[node name="TitleSound" type="AudioStreamPlayer" parent="." unique_id=491874339]
process_mode = 3
stream = ExtResource("12_2ia2x")
volume_db = -10.0
autoplay = true

[node name="Tutorial" parent="." unique_id=1583732572 instance=ExtResource("10_8mikk")]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TutorialBtn" to="." method="_on_tutorial_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
